# xe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: orxata.h  platform.h  scene.h  xe.h  xe_asset.h  xe_config.h  xe_gfx.h  xe_platform.h  xe_render.h  xe_renderer.h  xe_resource.h  xe_scene.h
src/: orxata.c  platform.c  scene.c  scene.h  xe.c  xe_asset.c  xe_gfx.c  xe_gfx_helpers.h  xe_gfx_internal.h  xe_platform.c  xe_render.c  xe_render_internal.h  xe_renderer.c  xe_resource.c  xe_scene.c  xe_scene_internal.h
test/: CMakeLists.txt  test_scene.c
test/demos/spine-demo/: main.c  xe_spine.c  xe_spine.h
test/src/: hello.c  hello_world.c  main.c  mock.c  xe_nuklear.c  xe_nuklear.h  xe_nuklear_incl.h  xe_spine.c  xe_spine.h
